--- a/RTLogger/RTLogger.vcxproj.filters
+++ b/RTLogger/RTLogger.vcxproj.filters
@@ -72,4 +72,7 @@
       <Filter>Services\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="README.txt" />
+  </ItemGroup>
 </Project>
